--- a/views/homePage.handlebars
+++ b/views/homePage.handlebars
@@ -1,17 +1,24 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
-    <link rel="icon" href="/img/favicon.png">
-    <link rel="Stylesheet" href="css/homePage.css">
+  <head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="/img/favicon.png" />
+    <link rel="Stylesheet" href="css/homePage.css" />
     <title>PunkWinds</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div id="imagensTopoSite">
-            <img src="/img/favicon.png">
-        </div>
-        <h1>PunkWinds</h1>
+      <div id="imagensTopoSite">
+        <img src="/img/favicon.png" />
+      </div>
+      <h1>PunkWinds</h1>
+      {{#if nome}}
+        <a href="/perfil">{{nome}}</a>
+      {{else}}
+        <a href="/cadastro">Template (Registrar)</a>
+      {{/if}}
     </header>
-</body>
+  </body>
 </html>
