Modify 'Voltar' link with query parameters
Updated the 'Voltar' link to include query parameters for 'nome' and 'pfp'.

--- a/views/atualizarPage.handlebars
+++ b/views/atualizarPage.handlebars
@@ -70,9 +70,10 @@
 
           <button type="submit">Atualizar</button>
         </form>
-        <a href="/">Voltar</a>
+        <a href="/?nome={{nome}}&pfp={{pfp}}">Voltar</a>
       </div>
     </div>
 
   </body>
+
 </html>
