Update UserPage.handlebars links and structure

--- a/views/UserPage.handlebars
+++ b/views/UserPage.handlebars
@@ -14,7 +14,7 @@
       <h1>Seja bem vindo novamente, {{nome}}</h1>
     </div>
 
-    <a href="/?nome={{nome}}&pfp={{pfp}}">Voltar</a>
+    <a href="/?nome={{nome}}&pfp={{pfp}}">Home</a>
     <a href="/">Desconectar</a>
     <a href="/user/atualizar/?nome={{nome}}&pfp={{pfp}}">Atualizar Dados</a>
   </body>
