Refactor atualizarPage.handlebars structure

--- a/views/atualizarPage.handlebars
+++ b/views/atualizarPage.handlebars
@@ -1,11 +1,8 @@
 <html lang="en">
   <head>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet"/>
     <title>Atualização</title>
-    <link rel="icon" href="/img/favicon.png" />
+    <link rel="icon" href="/img/favicon.png"/>
     <link rel="Stylesheet" href="/css/cadastroPage.css" />
   </head>
   <body>
@@ -68,9 +65,9 @@
             </label>
           </div>
 
-          <button type="submit">Atualizar</button>
+          <button id="IMPORTANTE" type="submit">Atualizar</button>
         </form>
-        <a href="/?nome={{nome}}&pfp={{pfp}}">Voltar</a>
+        <a href="/user?nome={{nome}}&pfp={{pfp}}">Voltar</a>
       </div>
     </div>
 
