Revise cadastroPage layout and navigation buttons
Updated the cadastroPage.handlebars to include a new button for navigation and changed the structure of the back link.

--- a/views/cadastroPage.handlebars
+++ b/views/cadastroPage.handlebars
@@ -57,9 +57,9 @@
 </div>
 
 
-          <button type="submit">Cadastrar</button>
+          <button id="IMPORTANTE" type="submit">Cadastrar</button>
         </form>
-        <a href="/">Voltar</a>  
+        <button><a href="/login">Voltar</a></button>
       </div>
     </div>
 
