Revise product images and pricing in homePage.handlebars
Updated product images and prices on the home page.

--- a/views/homePage.handlebars
+++ b/views/homePage.handlebars
@@ -21,7 +21,7 @@
                     <img src="/img/{{pfp}}.png">
                 </div>
                 {{else}}
-                <div id="Usuario" onclick="window.open('/cadastro', '_self')" style="border: 2px solid red; padding-left: 2px;">
+                <div id="Usuario" onclick="window.open('/login', '_self')" style="border: 2px solid red; padding-left: 2px;">
                     <p>Logar</p>
                     <img src="/img/pfp0.png">
                 </div>
@@ -33,26 +33,26 @@
 <main id="Content">
     <div id="FirstImgSet">
         <div class="imgPrice">
-            <img src="/img/thealwaysreliablePLACEHOLDER.jpeg">
+            <img src="/img/JojoLandsAllStarBattle.png">
             <div class="PriceName">
                 <p>Jojolands: All-star battle</p>
-                <p>R$ 5,00</p>
+                <p>R$ 44,99</p>
             </div>
         </div>
 
         <div class="imgPrice">
-            <img src="/img/thealwaysreliablePLACEHOLDER.jpeg">
+            <img src="/img/MyLovelyFurmate.png">
             <div class="PriceName">
                 <p>My lovely Furmate</p>
-                <p>R$ 5,00</p>
+                <p>R$ 62,10</p>
             </div>
         </div>
 
         <div class="imgPrice">
-            <img src="/img/thealwaysreliablePLACEHOLDER.jpeg">
+            <img src="/img/Mob100psychicShowdown.png">
             <div class="PriceName">
                 <p>Mob psycho 100 showdown</p>
-                <p>R$ 5,00</p>
+                <p>R$ 59,99</p>
             </div>
         </div>
     </div>
