--- a/public/Css/cadastroPage.css
+++ b/public/Css/cadastroPage.css
@@ -39,6 +39,20 @@ h2{
     align-items: center; 
 }
 
+#LogarConta{
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;     
+}
+
+#userAtualizar{
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
+
 form div{
     margin-bottom: 20px;
 
@@ -73,4 +87,8 @@ form input{
     flex-direction: column;
     align-items: center; 
     justify-content: center;
+}
+
+#IMPORTANTE{
+    margin-bottom: 10px;
 }
