Refactor UserPage layout with header element

--- a/views/UserPage.handlebars
+++ b/views/UserPage.handlebars
@@ -1,18 +1,17 @@
 <html lang="en">
   <head>
     <link
-      href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap"
-      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet"
     />
-    <link rel="icon" href="/img/favicon.png" />
+    <link rel="icon" href="/img/favicon.png"/>
     <link rel="Stylesheet" href="/css/UserPage.css" />
     <title>{{nome}}</title>
   </head>
   <body>
-    <div id="topo">
+    <header id="topo">
       <img src="/img/{{pfp}}.png" />
       <h1>Seja bem vindo novamente, {{nome}}</h1>
-    </div>
+    </header>
 
     <a href="/?nome={{nome}}&pfp={{pfp}}">Home</a>
     <a href="/">Desconectar</a>
