Update UserPage to use 'id' instead of 'nome'

--- a/views/UserPage.handlebars
+++ b/views/UserPage.handlebars
@@ -1,9 +1,10 @@
 <html lang="en">
   <head>
     <link
-      href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap"
+      rel="stylesheet"
     />
-    <link rel="icon" href="/img/favicon.png"/>
+    <link rel="icon" href="/img/favicon.png" />
     <link rel="Stylesheet" href="/css/UserPage.css" />
     <title>{{nome}}</title>
   </head>
@@ -13,8 +14,8 @@
       <h1>Seja bem vindo novamente, {{nome}}</h1>
     </header>
 
-    <a href="/?nome={{nome}}&pfp={{pfp}}">Home</a>
+    <a href="/?id={{id}}">Home</a>
     <a href="/">Desconectar</a>
-    <a href="/user/atualizar/?nome={{nome}}&pfp={{pfp}}">Atualizar Dados</a>
+    <a href="/user/atualizar/?id={{id}}">Atualizar Dados</a>
   </body>
 </html>
