Fix HTML structure in gamePage.handlebars

--- a/views/gamePage.handlebars
+++ b/views/gamePage.handlebars
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap"
+      rel="stylesheet"
+    />
     <title>{{gameName}}</title>
-    <link rel="icon" href="/img/favicon.png">
-    <link rel="Stylesheet" href="css/cadastroPage.css">
+    <link rel="icon" href="/img/favicon.png" />
+    <link rel="Stylesheet" href="css/cadastroPage.css" />
   </head>
   <body>
-    <img src="/img/{{gameImg}}.png">
+    <img src="/img/{{gameImg}}.png" />
     <p>{{gameName}}</p>
     <p>{{gamePrice}}</p>
   </body>
