--- a/views/cadastroPage.handlebars
+++ b/views/cadastroPage.handlebars
@@ -30,6 +30,7 @@
             <input
               type="password"
               name="senha"
+              minlength="8"
               placeholder="Sua senha"
               required
             />
