Add minlength to password input field
Updated password input to require a minimum length of 8 characters.

--- a/views/atualizarPage.handlebars
+++ b/views/atualizarPage.handlebars
@@ -29,7 +29,7 @@
           </div>
 
           <div>
-            <input type="password" name="senha" value="{{senha}}" required /><br
+            <input type="password" name="senha" minlength="8" value="{{senha}}" required /><br
             />
           </div>
           <div>
