--- a/public/Css/UserPage.css
+++ b/public/Css/UserPage.css
@@ -24,3 +24,33 @@ header img{
     font-family: 'Sedgwick Ave Display', cursive;
     font-size: 40px;
 }
+
+main{
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+}
+
+#firstColumn{
+    width: 20vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+}
+
+#secondColumn{
+    width: 30vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+}
+
+#thirdColumn{
+    width: 50vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+}
