Fix HTML structure and update friend/game messages

--- a/views/UserPage.handlebars
+++ b/views/UserPage.handlebars
@@ -36,7 +36,7 @@
       {{#if maisde0amg}}
       <p>placeholder</p>
       {{else}}
-      <p>Você Não possui Jogo! Hora de Gastar!!!</p>
+      <p>Você Não possui nenhum Jogo! Hora de Gastar!!!</p>
       {{/if}}
     </div>
 
@@ -74,3 +74,4 @@
   </script>
   </body>
 </html>
+
