Add purchase form to game page
Added a form for purchasing the game with hidden inputs for game IDs.

--- a/views/gamePage.handlebars
+++ b/views/gamePage.handlebars
@@ -12,5 +12,10 @@
     <img src="/img/{{gameImg}}.png" />
     <p>{{gameName}}</p>
     <p>{{gamePrice}}</p>
+    <form action="/game/comprar" method="POST">
+        <input type="hidden" name="idgames" value="{{idgames}}">
+        <input type="hidden" name="id" value="{{id}}">
+    <button type="submit">Comprar Jogo</button>
+    </form>
   </body>
 </html>
