--- a/public/Css/UserPage.css
+++ b/public/Css/UserPage.css
@@ -40,7 +40,7 @@ main{
 }
 
 #secondColumn{
-    width: 30vw;
+    width: 40vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -48,9 +48,31 @@ main{
 }
 
 #thirdColumn{
-    width: 50vw;
+    width: 40vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     align-content: center;
+}
+
+.game{
+    border: green solid 2px;
+    display: flex;
+    flex-direction: row;
+    height: 90px;
+    width: 80%;
+
+}
+
+.game img{
+    height: 90px;
+    width: 180px;
+}
+
+.game h2{
+    margin-top: 20px;
+    height: auto;
+    margin-bottom: 0;
+    color: white;
+    font-size: 24px;
 }
