--- a/views/amigosPage.handlebars
+++ b/views/amigosPage.handlebars
@@ -33,7 +33,7 @@
             {{#each amigos}}
             <div class="friend-card">
                 <div class="friend-info">
-                    <img src="/img/{{this.pfp}}.png" alt="PFP">
+                    <img id="friendimg" src="/img/{{this.pfp}}.png" alt="PFP">
                     <div>
                         <strong>
                             {{#if this.nickname}}
